<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/seekbarEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNameEdit"
        android:layout_alignStart="@+id/editTextNameEdit"
        android:layout_below="@+id/editTextNameEdit"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmailEdit"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/editTextEmailEdit"
        android:layout_toStartOf="@+id/editTextEmailEdit"
        android:text="@string/department" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView24"
        android:layout_alignRight="@+id/textView24"
        android:layout_below="@+id/textView24"
        android:layout_marginTop="19dp">

        <RadioButton
            android:id="@+id/radioButtonSISEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonSis" />

        <RadioButton
            android:id="@+id/radioButtonCSEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cs" />

        <RadioButton
            android:id="@+id/radioButtonBIOEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bio" />

        <RadioButton
            android:id="@+id/radioButtonOtherEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewMoodEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_alignStart="@+id/radioGroup2"
        android:layout_below="@+id/radioGroup2"
        android:layout_marginTop="17dp"
        android:text="@string/mood" />

    <SeekBar
        android:id="@+id/seekBar7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewMoodEdit"
        android:layout_marginTop="29dp" />

    <Button
        android:id="@+id/buttonSubmitEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/submit" />

</RelativeLayout>