<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/student_info" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="25dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="53dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="72dp"
        android:text="@string/department_display" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="54dp"
        android:text="@string/mood1" />

    <TextView
        android:id="@+id/textView12Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp" />

    <TextView
        android:id="@+id/textView13Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView12Name"
        android:layout_alignRight="@+id/textView12Name"
        android:layout_alignTop="@+id/textView5" />

    <TextView
        android:id="@+id/textView14Dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignEnd="@+id/textView13Email"
        android:layout_alignRight="@+id/textView13Email" />

    <TextView
        android:id="@+id/textView15mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView14Dept"
        android:layout_alignRight="@+id/textView14Dept"
        android:layout_alignTop="@+id/textView7" />

    <ImageView
        android:id="@+id/imageViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView12Name"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        app:srcCompat="@drawable/ic_action_edit" />

    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewName"
        android:layout_alignStart="@+id/imageViewName"
        android:layout_alignTop="@+id/textView13Email"
        android:cropToPadding="true"
        app:srcCompat="@drawable/ic_action_edit" />

    <ImageView
        android:id="@+id/imageViewDept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewEmail"
        android:layout_alignStart="@+id/imageViewEmail"
        android:layout_alignTop="@+id/textView14Dept"
        app:srcCompat="@drawable/ic_action_edit" />

    <ImageView
        android:id="@+id/imageViewMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewDept"
        android:layout_alignStart="@+id/imageViewDept"
        android:layout_alignTop="@+id/textView15mood"
        app:srcCompat="@drawable/ic_action_edit" />

</RelativeLayout>